journal entry and cleanup of ecma

--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -27,9 +27,8 @@ var myPrim = "copyable but immutable";
 
 updatePrim(myPrim)</pre>
     <hr>
-    <h2>Here we have an simple object with 2 props...
-      <em class="paleY">.arrProp</em> &
-      <em class="paleY">.funcProp</em>
+    <h2>Here we have a simple object with 2 props...
+      <span class="paleY">.arrProp</span> & <span class="paleY">.funcProp</span>
     </h2>
     <p></p>
     <pre class="prettyprint linenums w60 ctr">myObj = {
