--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,19 +21,23 @@
     </ol>
     <hr />
   -->
-    <h2 class="date">Friday December 5th, 2017</h2>
-    <h4 class="sleep">Slept: 7 hours</h4><br><br>
-    <h3 class="subtitle">Node work, es6 work on destructuring exercises, revisiting examples of pass by ref/value and placing a decent example in ecma view.</h3>
+    <h2 class="date">Wednesday December 6th, 2017</h2>
+    <h4 class="sleep">Slept: 6 hours</h4><br><br>
+    <h3 class="subtitle">Node work, es6 work on destructuring exercises, revisiting examples of pass by ref/value and placing a decent example in ecma view.
+      <a href="https://www.udemy.com/understand-nodejs/learn/v4/t/lecture/3560170?start=0" target="_blank">tony alicea's</a> excellent node course is on the menu.</h3>
+
+      <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">CSS Grid Garden - <a href="https://t.co/X0rXPiNN66">https://t.co/X0rXPiNN66</a> - An interactive game to learn CSS Grid. The code is also on Github: <a href="https://t.co/roUhQtyn5c">https://t.co/roUhQtyn5c</a> <a href="https://t.co/W7N3HsBkCI">pic.twitter.com/W7N3HsBkCI</a></p>&mdash; Umar Hansa (@umaar) <a href="https://twitter.com/umaar/status/849933702587187200?ref_src=twsrc%5Etfw">April 6, 2017</a></blockquote>
     <br>
     <h3>To do:</h3>
     <ol class="todo">
-      <li>pass by ref/val example in ecma view</li>
-      <li></li>
-      <li><span class="ltred">Potential Blocks:</span></li>
+      <li>Ecma View: pass by ref/val example in ecma view</li>
+      <li>The "Reveal Module" pattern in node view</li>
+      <li><span class="ltred">Potential Blocks: </span>(Motivation 8/10, but) limited time today</li>
     </ol><br>
     <h3>Done: </h3>
     <ol class="done">
-      <li>PLACEHOLDERDONETASKS</li>
+      <li>pass by ref/val entry done</li>
+      <li>"Reveal Module" pattern added to node view</li>
     </ol>
     <hr />
 
