--- a/states/node/node.html
+++ b/states/node/node.html
@@ -7,6 +7,7 @@
     <pre>
 <div class="framed8">
   <h1 class="chtitle softwhite clean">The "Reveal Module Pattern" in node</h1>
+  <h2>The reveal module pattern is a way of exposing only the properties and methods you wish to be used via a returned object.</h2>
   <p>The truth is, there are several ways under the sun to access code from other modules. Here, we'll discuss 4.<br>
     The good news--? --They're not complicated if you understand objects. </p>
   <pre class="shadn w40 ctr">
