--- a/states/node/node.html
+++ b/states/node/node.html
@@ -8,8 +8,7 @@
 <div class="framed8">
   <h1 class="chtitle softwhite clean">The "Reveal Module Pattern" in node</h1>
   <h2>The reveal module pattern is a way of exposing only the properties and methods you wish to be used via a returned object.</h2>
-  <p>The truth is, there are several ways under the sun to access code from other modules. Here, we'll discuss 4. The first three are trivial. They are steps toward an understanding of our "module pattern".<br>
-    The good news--? --They're not complicated if you understand objects. </p>
+  <p>There are several ways to access code from other modules in node. Here, we'll address four. The first three are trivially easy. They are steps toward an understanding of our "module pattern".</p>
   <pre class="shadn w40 ctr">
       <code class="med navy"><span>📂</span>node_files</code>
       file<code class="med navy"><span>📄</span>app.js</code>
@@ -21,9 +20,9 @@
             file<code class="med navy"><span>📄</span>four.js</code>
 </pre>
 
-<h4>app.js "finds" <em class="wh">index.js</em> by default</h4>
+<h4></h4>
     <div class="simple-frame">
-<span>app.js</span>
+<span>app.js </span><em class="clean clean">(Note: app.js "finds" <em class="wh">index.js</em> by default and so link to that file is implicit)</em>
 <pre class="prettyprint w60 ctr">
 <span class="fRight sm brdr-w w20">// This one line requires index.js that will "cull", essentially, a collection of files or code.</span>
 var filmFest = require("./films");
