Array.from() entry es6 view

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -56,12 +56,13 @@ componentDidMount() {
 <h3>To do:</h3>
   <ol class="todo">
     <li>Several components done for react app.</li>
-    <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li>Ecma Entry on Array.from( <em class="ltred">arguments</em> )</li> 
+    <li><span class="ltred">Potential Blocks:</span> It's a quiet day. No blocks</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>stateful components done</li>
+    <li>Lesson 5 in Javascript</li>
   </ol>
   <hr />
     
