--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -7,6 +7,16 @@
   <div class="ecma-entry entry">
     <pre>
       <!--entire page pre-->
+<div class="plain-frame1">
+  <h1 class="clean chtitle">testTitle</h1>
+  <p>explanatory Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis itaque illo quia? Autem aut alias expedita quis voluptate! Ad perspiciatis sequi quod ab, inventore suscipit quam incidunt fuga atque eligendi!</p>
+  <pre class="prettyprint ctr w40">code snippet</pre>
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum amet minima minus commodi quam pariatur autem! Aut doloremque culpa rem sapiente fugit voluptas rerum nulla, eius iusto neque praesentium recusandae!</p>
+  <pre class="prettyprint ctr w40">codesnippet</pre>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque tempore suscipit quibusdam a laudantium! Possimus laboriosam velit consequuntur quam aut error magni facere tempore, ut quidem veritatis iure fugiat ipsa.</p>
+  <pre class="prettyprint ctr w40">snippet</pre>
+</div>
+<hr>
 
 <div class="ctr softbrown-fr">
   <h1 class="chtitle coral">Pass by value vs pass by reference</h1>
