--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,9 +21,33 @@
     </ol>
     <hr />
 <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
-      <p lang="en" dir="ltr"><a href="https://twitter.com/kentcdodds?ref_src=twsrc%5Etfw">@kentcdodds</a> I LOVE the pace of your videos. No fluff. Quickly teaches concepts so you can go figure them out yourselves. I wish everything was taught like this. <a href="https://t.co/BHoHfSghx3">https://t.co/BHoHfSghx3</a></p>&mdash; Tim Edwards (@tim_shane) <a href="https://twitter.com/tim_shane/status/938833014733369345?ref_src=twsrc%5Etfw">December 7, 2017</a></blockquote>
+      <p lang="en" dir="ltr">Design forms? Check out <a href="https://t.co/9ZpE837gWy">https://t.co/9ZpE837gWy</a> video is so 😂 <a href="https://twitter.com/hashtag/ux?src=hash&amp;ref_src=twsrc%5Etfw">#ux</a> <a href="https://twitter.com/hashtag/fuckdropdowns?src=hash&amp;ref_src=twsrc%5Etfw">#fuckdropdowns</a></p>&mdash; Nicole Commander (@nicolecommander) <a href="https://twitter.com/nicolecommander/status/923081708102066176?ref_src=twsrc%5Etfw">October 25, 2017</a></blockquote>
   -->
-  <h2 class="date">Friday December 9th, 2017</h2>
+  <h2 class="date">Sunday December 11th, 2017</h2>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle">TIL: lots about .match() (see entry in js view). Without using regex, an object is returned... Working today on an api call to fill out my components:<br>
+  
+<div class="ctr w60 brdr-w" > <h3 class="chtitle dkblue">Embed this in brain:</h3>
+<code>onChange</code> occuring on a component (ie an < input >) --> use <code>this.state</code>
+  <br>Using<code>this.state</code>requires a constructor.
+  <br>Subsequent references to state require --><code>this.setState</code></div>
+</h3>
+  <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+      <p lang="en" dir="ltr">Design forms? Check out <a href="https://t.co/9ZpE837gWy">https://t.co/9ZpE837gWy</a> video is so 😂 <a href="https://twitter.com/hashtag/ux?src=hash&amp;ref_src=twsrc%5Etfw">#ux</a> <a href="https://twitter.com/hashtag/fuckdropdowns?src=hash&amp;ref_src=twsrc%5Etfw">#fuckdropdowns</a></p>&mdash; Nicole Commander (@nicolecommander) <a href="https://twitter.com/nicolecommander/status/923081708102066176?ref_src=twsrc%5Etfw">October 25, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>.match() entry in ecma</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+<br>
+    <h2 class="date">Friday December 9th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Lots of react training going through the life-cycle. I came upon the following issue:
 <pre class="w40 brdr-w dkblue ctr sm">
