--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -25,13 +25,12 @@
   -->
   <h2 class="date">Sunday December 11th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
-  <h3 class="subtitle">TIL: lots about .match() (see entry in js view). Without using regex, an object is returned... Working today on an api call to fill out my components:<br>
+  <h3 class="subtitle">TIL: lots about .match() (see entry in js view). Without using regex, an Array is returned... Working today on an api call to fill out my components:</h3>
   
 <div class="ctr w60 brdr-w" > <h3 class="chtitle dkblue">Embed this in brain:</h3>
 <code>onChange</code> occuring on a component (ie an < input >) --> use <code>this.state</code>
-  <br>Using<code>this.state</code>requires a constructor.
+  <br>Using<code>this.state</code>requires a<code>constructor</code>
   <br>Subsequent references to state require --><code>this.setState</code></div>
-</h3>
   <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
       <p lang="en" dir="ltr">Design forms? Check out <a href="https://t.co/9ZpE837gWy">https://t.co/9ZpE837gWy</a> video is so 😂 <a href="https://twitter.com/hashtag/ux?src=hash&amp;ref_src=twsrc%5Etfw">#ux</a> <a href="https://twitter.com/hashtag/fuckdropdowns?src=hash&amp;ref_src=twsrc%5Etfw">#fuckdropdowns</a></p>&mdash; Nicole Commander (@nicolecommander) <a href="https://twitter.com/nicolecommander/status/923081708102066176?ref_src=twsrc%5Etfw">October 25, 2017</a></blockquote>
   <br>
@@ -39,11 +38,11 @@
   <ol class="todo">
     <li>.match() entry in ecma</li>
     <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li><span class="ltred">Potential Blocks:</span> limited time. (1hr)</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>.match() entry done</li>
   </ol>
   <hr />
 <br>
