--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -25,7 +25,8 @@
   -->
   <h2 class="date">Sunday December 11th, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
-  <h3 class="subtitle">TIL: lots about .match() (see entry in js view). Without using regex, an Array is returned... Working today on an api call to fill out my components:</h3>
+  <h3 class="subtitle">TIL: lots about .match() (see entry in js view). Without using regex, an Array is returned... Working today on an api call to fill out my components. <br>
+  Watched an <a href="https://youtu.be/e-5obm1G_FY" target="_blank">incredible</a> video on functional programming. Very inspiring.</h3>
   
 <div class="ctr w60 brdr-w" > <h3 class="chtitle dkblue">Embed this in brain:</h3>
 <code>onChange</code> occuring on a component (ie an < input >) --> use <code>this.state</code>
